clusters/work/infra/config/longhorn/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-minio-egress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio
      ports:
        - port: 9000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-dns-egress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-kube-api-egress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.96.0.1/32
        - ipBlock:
            cidr: 10.25.25.13/32
        - ipBlock:
            cidr: 10.25.25.14/32
        - ipBlock:
            cidr: 10.25.25.18/32
        - ipBlock:
            cidr: 192.168.71.64/32
        - ipBlock:
            cidr: 192.168.64.128/32
      ports:
        - port: 6443
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-same-namespace
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-node-egress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.25.25.14/32
        - ipBlock:
            cidr: 10.25.25.15/32
        - ipBlock:
            cidr: 10.25.25.16/32
        - ipBlock:
            cidr: 10.25.25.17/32
        - ipBlock:
            cidr: 10.25.25.18/32
      ports:
        - port: 10250
          protocol: TCP
        - port: 8501
          protocol: TCP
        - port: 8502
          protocol: TCP
        - port: 8503
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-kube-apiserver-webhook-ingress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.25.25.13/32
        - ipBlock:
            cidr: 10.25.25.14/32
        - ipBlock:
            cidr: 10.25.25.18/32
        - ipBlock:
            cidr: 192.168.71.64/32
        - ipBlock:
            cidr: 192.168.64.128/32
      ports:
        - port: 9501
          protocol: TCP
        - port: 9502
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-node-host-ingress
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.25.25.0/24
        - ipBlock:
            cidr: 192.168.228.64/26
        - ipBlock:
            cidr: 192.168.46.0/26
        - ipBlock:
            cidr: 192.168.197.0/26
      ports:
        - port: 9500
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow-from-ingress-nginx
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8000
          protocol: TCP
        - port: 80
          protocol: TCP
